# numerical-truss-optimizer

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat
data/3D/The Croissant/: points.csv
data/Design 1/: loads.csv  materials.csv  supports.csv  trusses.csv
data/Design 3_opt/: supports.csv
data/Group 34/3D/Apple Pie/: loads.csv  points.csv  supports.csv  trusses.csv
data/Group 34/3D/The Croissaint-0.1/: loads.csv  points.csv  supports.csv
data/Group 34/3D/The Croissaint-0.2/: points.csv  trusses.csv
data/Group 34/3D/The Croissant/: materials.csv
data/Group 34/Design 1/: points.csv
data/Group 34/Design 2/: points.csv  trusses.csv
data/Group 34/Design 3/: loads.csv
data/Group 34/Design 3_opt/: points.csv
data/Group 34/The Croissant/: materials.csv
data/Group 34/The Croissant Optimized/: points.csv  supports.csv
data/The Croissant/: materials.csv  points.csv  trusses.csv
data/The Croissant Optimized/: loads.csv  trusses.csv
data/design_3/: points.csv  supports.csv  trusses.csv
src/: editor.py  fem_solver.py  launcher.py  mp_latest.py  multivariate.py  multivariate_logging.py  optimizer.py  optimizer_app.py  truss_analysis.py  truss_model.py  truss_solver.py  ui_themes.py  visualize.py  visualizer.py
src/editor/: __init__.py  main.py
src/optimizer/: __init__.py  analysis.py  main.py  optimizer.py  truss_model.py  ui_components.py  ui_themes.py
src/optimizer_3d/: analysis.py  fem_solver.py  main.py  optimizer.py  truss_model.py  ui_components.py
src/visualizer/: __init__.py  main.py
