[project]
name = "numerical-truss-optimizer"
description = "A numerical truss analysis and optimization suite with GUI."
authors = [
    { name = "Csaba Benedek" }
]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6",
    "matplotlib",
    "pandas",
    "numpy",
    "scipy"
]

[project.urls]
homepage = "https://github.com/madeofcloud/numerical-truss-optimizer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.venv]
# This section is informational; venv is managed outside pyproject.toml
path = "venv"
python = "3.12"
